improved interpretation to 2d with tips from math tutor

--- a/hw2_2023_inc_part_2_WIP.ipynb
+++ b/hw2_2023_inc_part_2_WIP.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 139,
    "id": "0c56160e-301a-4888-b439-a45bc02b8171",
    "metadata": {},
    "outputs": [],
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 140,
    "id": "d9090c65-724c-4bfc-a19c-85cd7314ca06",
    "metadata": {},
    "outputs": [
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 141,
    "id": "1d6808a3-aecd-4ebe-aa79-5ddcbff09c17",
    "metadata": {},
    "outputs": [
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -581,7 +581,7 @@
        "       [ 0.,  0.,  0.,  0.,  0.,  1., -2.,  1.]])"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -698,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -782,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -792,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -828,13 +828,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>100</th>\n",
-       "      <td>7.97 ms +- 3.67 ms per loop (mean +- std. dev. of 3 runs, 10 loops each</td>\n",
-       "      <td>202 us +- 59 us per loop (mean +- std. dev. of 3 runs, 10 loops each</td>\n",
+       "      <td>11.7 ms +- 4.64 ms per loop (mean +- std. dev. of 3 runs, 10 loops each</td>\n",
+       "      <td>246 us +- 112 us per loop (mean +- std. dev. of 3 runs, 10 loops each</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1000</th>\n",
-       "      <td>53.3 ms +- 6.82 ms per loop (mean +- std. dev. of 3 runs, 10 loops each</td>\n",
-       "      <td>4.47 ms +- 74.9 us per loop (mean +- std. dev. of 3 runs, 10 loops each</td>\n",
+       "      <td>95.7 ms +- 37.8 ms per loop (mean +- std. dev. of 3 runs, 10 loops each</td>\n",
+       "      <td>4.7 ms +- 49.6 us per loop (mean +- std. dev. of 3 runs, 10 loops each</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -843,16 +843,16 @@
       "text/plain": [
        "                                                                        dense  \\\n",
        "n                                                                               \n",
-       "100   7.97 ms +- 3.67 ms per loop (mean +- std. dev. of 3 runs, 10 loops each   \n",
-       "1000  53.3 ms +- 6.82 ms per loop (mean +- std. dev. of 3 runs, 10 loops each   \n",
+       "100   11.7 ms +- 4.64 ms per loop (mean +- std. dev. of 3 runs, 10 loops each   \n",
+       "1000  95.7 ms +- 37.8 ms per loop (mean +- std. dev. of 3 runs, 10 loops each   \n",
        "\n",
-       "                                                                       sparse  \n",
-       "n                                                                              \n",
-       "100      202 us +- 59 us per loop (mean +- std. dev. of 3 runs, 10 loops each  \n",
-       "1000  4.47 ms +- 74.9 us per loop (mean +- std. dev. of 3 runs, 10 loops each  "
+       "                                                                      sparse  \n",
+       "n                                                                             \n",
+       "100    246 us +- 112 us per loop (mean +- std. dev. of 3 runs, 10 loops each  \n",
+       "1000  4.7 ms +- 49.6 us per loop (mean +- std. dev. of 3 runs, 10 loops each  "
       ]
      },
-     "execution_count": 97,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -874,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -885,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -909,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
@@ -954,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 165,
    "id": "d71e4897-2b95-44de-88a0-029c89a24609",
    "metadata": {},
    "outputs": [
@@ -995,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 166,
    "id": "f3087de8-ee2b-45f1-a26c-06c747842835",
    "metadata": {},
    "outputs": [],
@@ -1007,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -1039,45 +1039,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "accuracy_100_sparse: 5.422800026827077e-16\n",
-      "accuracy_100_dense: 6.213745308942541e-16\n",
-      "accuracy_1000_sparse: 1.5786692371158656e-15\n",
-      "accuracy_1000_dense: 1.6321437794182021e-15\n",
-      "difference in accuracy for n = 100: 7.909452821154637e-17\n",
-      "difference in accuracy for n = 1000: 5.347454230233653e-17\n"
+      "residual_100_sparse: 5.422800026827077e-16\n",
+      "residual_100_dense: 6.213745308942541e-16\n",
+      "residual_1000_sparse: 1.5786692371158656e-15\n",
+      "residual_1000_dense: 1.6321437794182021e-15\n",
+      "ratio of residuals for n = 100: 1.145855513425276\n",
+      "ratio of residuals for n = 1000: 1.0338731768790475\n"
      ]
     }
    ],
    "source": [
     "# comparing the accuracy of solutions by computing the residual\n",
-    "accuracy_100_sparse = np.linalg.norm(b_100 - A_n_100 @ x_100_sparse)\n",
-    "accuracy_1000_sparse = np.linalg.norm(b_1000 - A_n_1000 @ x_1000_sparse)\n",
-    "accuracy_100_dense = np.linalg.norm(b_100 - A_n_100 @ x_100_dense)\n",
-    "accuracy_1000_dense = np.linalg.norm(b_1000 - A_n_1000 @ x_1000_dense)\n",
-    "print(f'accuracy_100_sparse: {accuracy_100_sparse}')\n",
-    "print(f'accuracy_100_dense: {accuracy_100_dense}')\n",
-    "print(f'accuracy_1000_sparse: {accuracy_1000_sparse}')\n",
-    "print(f'accuracy_1000_dense: {accuracy_1000_dense}')\n",
+    "residual_100_sparse = np.linalg.norm(b_100 - A_n_100 @ x_100_sparse)\n",
+    "residual_1000_sparse = np.linalg.norm(b_1000 - A_n_1000 @ x_1000_sparse)\n",
+    "residual_100_dense = np.linalg.norm(b_100 - A_n_100 @ x_100_dense)\n",
+    "residual_1000_dense = np.linalg.norm(b_1000 - A_n_1000 @ x_1000_dense)\n",
+    "print(f'residual_100_sparse: {residual_100_sparse}')\n",
+    "print(f'residual_100_dense: {residual_100_dense}')\n",
+    "print(f'residual_1000_sparse: {residual_1000_sparse}')\n",
+    "print(f'residual_1000_dense: {residual_1000_dense}')\n",
     "\n",
-    "# differences in accuracy\n",
-    "print(f'difference in accuracy for n = 100: {accuracy_100_dense - accuracy_100_sparse}')\n",
-    "print(f'difference in accuracy for n = 1000: {accuracy_1000_dense - accuracy_1000_sparse}')"
+    "# differences in resisduals\n",
+    "# take the factor difference maybe instead of the difference in residuals\n",
+    "print(f'ratio of residuals for n = 100: {(residual_100_dense/residual_100_sparse)}')\n",
+    "print(f'ratio of residuals for n = 1000: {residual_1000_dense/residual_1000_sparse}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "machine_precision: 2.220446049250313e-16\n"
+     ]
+    }
+   ],
+   "source": [
+    "machine_epsilon = np.finfo(float).eps\n",
+    "print('machine_precision:', machine_epsilon)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If we should be worried about this difference in solutions depends on the accuracy we require of the answer in order to achieve the goal for which the calculation was done. In general if the answer differs alot between dense or sparse methods, it would be cause for concern, however from the residuals here we see the difference in the answer is negligable ($7.909 \\times 10^{-17}$\n",
-    " for n = 100 and $5.348 \\times 10^{-17}$\n",
-    " for n = 1000). However, the condition number, which indicates sensitivity of the solution to changes in the input data, is fairly high at $1.3 \\cdot 10^{6}$. Errors, even if starting off small, can compound when using iterative methods. Concluding, we should be cautious in general with solutions obtained with either dense or sparse methods when the matrix is ill-conditioned, especially for application where around 8 digits of accuracy is required."
+    "  The fact that we use a computer for this problem in the first place implies we are content with an error at the machine precision level which the residuals are very close to, so NO, we should not be worried.\n",
+    "\n",
+    "More generally however, if we should be worried about this difference in solutions depends on the accuracy we require of the answer in order to achieve the goal for which the calculation was done. From the residuals here we see the difference in the answer is negligable as the residuals are small ($5.422 \\times 10^{-16}$\n",
+    " for sparse & n = 100, vs. $6.214 \\times 10^{-16}$ for dense & n = 100 and $1.579\\times 10^{-15}$  for sparse & n = 1000 and $1.632\\times 10^{-15}$ for dense & n = 1000.\n",
+    " for n = 1000). We see the error of the dense method is 14.6% larger versus the sparse method for n = 100 and 3.4% larger for dense versus the sparse method for n= 1000. So the sparse method is more accurate than the dense method for both cases, and both methods are more accuracte for n = 100 than n = 1000 given this matrix.\n",
+    " If the answer were to differ alot between dense or sparse methods, it would be cause for further investigation.\n",
+    " \n",
+    "\n",
+    "Now looking at the accuracy of $\\hat{x}$:\n",
+    "\n",
+    "The condition number, which indicates sensitivity of the solution to changes in the input data, is fairly high at $1.3 \\cdot 10^{6}$. Errors, even if starting off small, can compound when using iterative methods. Concluding, we should be cautious in general with solutions obtained with either dense or sparse methods when the matrix is ill-conditioned, especially for application where around 8 digits of accuracy is required in our estimate of $x$."
    ]
   }
  ],
