Minor grammar fix

--- a/hw2_2023_inc_part_2_WIP.ipynb
+++ b/hw2_2023_inc_part_2_WIP.ipynb
@@ -1094,18 +1094,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  The fact that we use a computer for this problem in the first place implies we are content with an error at the machine precision level which the residuals are very close to, so NO, we should not be worried.\n",
+    "  The fact that we use a computer for this problem in the first place implies that we are content with an error at the machine precision level which the residuals are very close to, so NO, we should not be worried.\n",
     "\n",
-    "More generally however, if we should be worried about this difference in solutions depends on the accuracy we require of the answer in order to achieve the goal for which the calculation was done. From the residuals here we see the difference in the answer is negligable as the residuals are small ($5.422 \\times 10^{-16}$\n",
-    " for sparse & n = 100, vs. $6.214 \\times 10^{-16}$ for dense & n = 100 and $1.579\\times 10^{-15}$  for sparse & n = 1000 and $1.632\\times 10^{-15}$ for dense & n = 1000.\n",
-    " for n = 1000). We see the error of the dense method is 14.6% larger versus the sparse method for n = 100 and 3.4% larger for dense versus the sparse method for n= 1000. So the sparse method is more accurate than the dense method for both cases, and both methods are more accuracte for n = 100 than n = 1000 given this matrix.\n",
-    " If the answer were to differ alot between dense or sparse methods, it would be cause for further investigation.\n",
-    " \n",
+    "More generally however, if we should be worried about this difference in solutions depends on the accuracy we require of the answer in order to achieve the goal for which the calculation was done. From the residuals, we can see that the difference in the answer is negligable as the residuals are small ($5.422 \\times 10^{-16}$ for sparse & n = 100, vs. $6.214 \\times 10^{-16}$ for dense & n = 100 and $1.579\\times 10^{-15}$  for sparse & n = 1000 and $1.632\\times 10^{-15}$ for dense & n = 1000 for n = 1000). We see the error of the dense method is 14.6% larger versus the sparse method for n = 100 and 3.4% larger for dense versus the sparse method for n= 1000. So the sparse method is more accurate than the dense method for both cases, and both methods are more accuracte for n = 100 than n = 1000 given this matrix. If the answer were to differ a lot between dense or sparse methods, it would grant further investigation.\n",
     "\n",
     "Now looking at the accuracy of $\\hat{x}$:\n",
     "\n",
     "The condition number, which indicates sensitivity of the solution to changes in the input data, is fairly high at $1.3 \\cdot 10^{6}$. Errors, even if starting off small, can compound when using iterative methods. Concluding, we should be cautious in general with solutions obtained with either dense or sparse methods when the matrix is ill-conditioned, especially for application where around 8 digits of accuracy is required in our estimate of $x$."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
