--- a/hw3_2023_WIP.ipynb
+++ b/hw3_2023_WIP.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 2,
    "id": "1599c119-77a5-42e3-936a-6f6515e88e35",
    "metadata": {},
    "outputs": [],
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 3,
    "id": "26f5a07a-b579-46bd-af9d-3db3146a782e",
    "metadata": {},
    "outputs": [],
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 4,
    "id": "cff553c1-4044-4683-9555-f8a0f741f66e",
    "metadata": {},
    "outputs": [],
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
        "       [-0.28571429, -0.65208639,  0.70224688]])"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
        "       [ 0.28571429,  0.65208639,  0.70224688]])"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
        "       [ 0.28571429,  0.65208639,  0.70224688]])"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -298,6 +298,15 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I_minus_Q_Qt_classic: [0.3999999999999988, 1.1399254501972176, 1.7886198105429398, 2.129721590748744, 2.251976073932503, 2.350148411790022, 2.4279776810939038, 2.6954767702827342, 2.911705760620351, 3.0744061132441125, 3.23481332024524]\n",
+      "I_minus_Q_Qt_modified: [0.3999999999999988, 1.139925450197168, 1.7886198105569349, 2.129721574834765, 2.251975049301451, 2.318989279992654, 2.439598105889169, 2.675057220452536, 2.940845433726328, 3.1197496386100085, 3.216876407010391]\n",
+      "I_minus_Q_Qt_reference: [0.4000000000000002, 1.1399254501971663, 1.7886198105569413, 2.129721574834604, 2.2519750493142703, 2.318989280008286, 2.439598096543433, 2.6750571747563803, 2.940846739801993, 3.1197327012036733, 3.2191459644672813]\n"
+     ]
     }
    ],
    "source": [
@@ -341,7 +350,11 @@
     "plt.plot(n_range,I_minus_Q_Qt_reference, c = 'blue', label = 'Reference Numpy Linag QR decomposition')\n",
     "plt.yscale('log')\n",
     "plt.legend()\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "print('I_minus_Q_Qt_classic:',I_minus_Q_Qt_classic)\n",
+    "print('I_minus_Q_Qt_modified:', I_minus_Q_Qt_modified)\n",
+    "print('I_minus_Q_Qt_reference:', I_minus_Q_Qt_reference)\n"
    ]
   },
   {
@@ -362,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 10,
    "id": "b4574283-5b0e-4f54-a0e4-727a9246db7e",
    "metadata": {},
    "outputs": [
@@ -426,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 11,
    "id": "a5fa9b4f-4a69-4dcf-bee4-23e67746ed06",
    "metadata": {},
    "outputs": [
@@ -435,7 +448,7 @@
      "evalue": "incomplete input (2024703894.py, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[158], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    # YOUR CODE HERE\u001b[0m\n\u001b[1;37m                    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m incomplete input\n"
+      "\u001b[1;36m  Cell \u001b[1;32mIn[11], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    # YOUR CODE HERE\u001b[0m\n\u001b[1;37m                    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m incomplete input\n"
      ]
     }
    ],
