--- a/hw3_2023_WIP.ipynb
+++ b/hw3_2023_WIP.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 34,
    "id": "1599c119-77a5-42e3-936a-6f6515e88e35",
    "metadata": {},
    "outputs": [],
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 35,
    "id": "26f5a07a-b579-46bd-af9d-3db3146a782e",
    "metadata": {},
    "outputs": [],
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 36,
    "id": "cff553c1-4044-4683-9555-f8a0f741f66e",
    "metadata": {},
    "outputs": [],
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
        "       [-0.28571429, -0.65208639,  0.70224688]])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
        "       [ 0.28571429,  0.65208639,  0.70224688]])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
        "       [ 0.28571429,  0.65208639,  0.70224688]])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -348,6 +348,8 @@
     "plt.plot(n_range,I_minus_Q_Qt_classic, c = 'orange', label = 'Classic Graham Schmidt')\n",
     "plt.plot(n_range,I_minus_Q_Qt_modified, c = 'red', label = 'Modified Graham Schmidt')\n",
     "plt.plot(n_range,I_minus_Q_Qt_reference, c = 'blue', label = 'Reference Numpy Linag QR decomposition')\n",
+    "plt.ylabel('||I - Q*Q.T||')\n",
+    "plt.xlabel('n')\n",
     "plt.yscale('log')\n",
     "plt.legend()\n",
     "plt.show()\n",
@@ -375,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 42,
    "id": "b4574283-5b0e-4f54-a0e4-727a9246db7e",
    "metadata": {},
    "outputs": [
@@ -424,6 +426,8 @@
     "plt.title('Comparing loss of orthogonality ||I - Q*Q.T|| for 2 tries of Classic Graham Schmidt')\n",
     "plt.plot(n_range,I_minus_Q_Qt_classic_1, c = 'green', label = 'Classic Graham Schmidt try 1')\n",
     "plt.plot(n_range,I_minus_Q_Qt_classic_2, c = 'purple', label = 'Classic Graham Schmidt try 2')\n",
+    "plt.ylabel('||I - Q*Q.T||')\n",
+    "plt.xlabel('n')\n",
     "plt.yscale('log')\n",
     "plt.legend()\n",
     "plt.show()\n",
@@ -450,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "a5fa9b4f-4a69-4dcf-bee4-23e67746ed06",
    "metadata": {},
    "outputs": [
@@ -459,7 +463,7 @@
      "evalue": "incomplete input (2024703894.py, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[11], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    # YOUR CODE HERE\u001b[0m\n\u001b[1;37m                    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m incomplete input\n"
+      "\u001b[1;36m  Cell \u001b[1;32mIn[43], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    # YOUR CODE HERE\u001b[0m\n\u001b[1;37m                    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m incomplete input\n"
      ]
     }
    ],
