--- a/hw3_2023_WIP.ipynb
+++ b/hw3_2023_WIP.ipynb
@@ -938,7 +938,18 @@
    "cell_type": "markdown",
    "id": "b59a127c-1f5f-4122-927c-20b0e90c5cb4",
    "metadata": {},
-   "source": []
+   "source": "source": [
+    "**Answer**\n",
+    "All of our algorithms work in obtaining Q and R matrices that when multiplied produce a similar matrix to the original and for an m×n matrix both the Householder and Gram-Schmidt cost $m\\cdot n^2−n^2/3$ floating point additions and multiplications [1]. This behavior, while expected, is not enough for exhausting the comparisson between algorithms as it is important to consider whether the algorithms also produce orthogonality (whether $Q'* Q$ is close to the identity or not) [2].\n",
+    "\n",
+    "In this regard, and as can be seen in our figure, there are huge differences between the different methods tested. The loss of orthogonality as n increases for the interval considered is greater than linear for the Gram Schmidt, close to linear for the modified Gram Schmidt method and basically stable for the Householder and reference method. Furthermore, these differences are many orders of magnitude apart, suggesting that for bigger values of n, the choice of the algorithm can have a great effect. \n",
+    "\n",
+    "These results are also consistent with the sources consulted, for respect to orthogonality is usually obtained with a higher computational costs [3], which can be easily confirmed by looking at the complexity of our different implementations. Heath, for instance, indicates that despite risking being heavy-handed when selectivity is needed while introducing zeros, the Householder method is nevertheless good for efficiency [3]. On the other hand the Classic Gram-Schmidt method usually has very poor orthogonality and for the Modified Gram-Schmidt method, it will depends upon the conditions of the original matrix, actually failing completely when the matrix is singular [2]. One last key insight from our results is that our Householder implementation has a loss of ortogonailty close to the one provided by the reference, which further supports the argument that it should be the preferred choice in this regard.\n",
+    "\n",
+    "[1] G. W. Stewart - Matrix Algorithms: Volume 1: Basic Decompositions\n",
+    "[2] Cleve Moler - Compare Gram-Schmidt and Householder Orthogonalization Algorithms (https://blogs.mathworks.com/cleve/2016/07/25/compare-gram-schmidt-and-householder-orthogonalization-algorithms/)\n",
+    "[3] Michael T. Heath - Scientific Computing An Introductory Survey (p. 126)\n"
+   ]
   },
   {
    "cell_type": "code",
