final version homework 3

--- a/homework3_PabloAlves15310191NitaiNijholt12709018.ipynb
+++ b/homework3_PabloAlves15310191NitaiNijholt12709018.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": null,
    "id": "1599c119-77a5-42e3-936a-6f6515e88e35",
    "metadata": {},
    "outputs": [],
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": null,
    "id": "cff553c1-4044-4683-9555-f8a0f741f66e",
    "metadata": {},
    "outputs": [],
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -470,6 +470,7 @@
     "list_of_Q_classic_2 = []\n",
     "for n in n_range:\n",
     "    Q_classic_GS_applied_once = list_of_Q_classic_1[n-2]\n",
+    "    # Applying classic Gram Schmidt once more to the Q matrix obtained from the first try\n",
     "    Q_gram_classic_2 = classical_gram_schmidt(Q_classic_GS_applied_once)[0]\n",
     "    list_of_Q_classic_2.append(Q_gram_classic_2)\n",
     "\n",
@@ -477,8 +478,8 @@
     "I_minus_Q_Qt_classic_2 = [np.linalg.norm(np.eye(Q.shape[0])-Q.T @ Q) for Q in list_of_Q_classic_2]\n",
     "\n",
     "plt.title('Comparing loss of orthogonality ||I - Q.T @ Q|| for 2 tries of Classic Gram Schmidt')\n",
-    "plt.plot(n_range,I_minus_Q_Qt_classic_1, c = 'green', label = 'Classic Gram Schmidt try 1')\n",
-    "plt.plot(n_range,I_minus_Q_Qt_classic_2, c = 'purple', label = 'Classic Gram Schmidt try 2')\n",
+    "plt.plot(n_range,I_minus_Q_Qt_classic_1, c = 'green', label = 'Classic Gram Schmidt application 1')\n",
+    "plt.plot(n_range,I_minus_Q_Qt_classic_2, c = 'purple', label = 'Classic Gram Schmidt application 2')\n",
     "plt.ylabel('||I - Q.T @ Q||')\n",
     "plt.xlabel('n')\n",
     "plt.yscale('log')\n",
@@ -487,6 +488,15 @@
     "\n",
     "print('I_minus_Q_Qt_classic_1:', I_minus_Q_Qt_classic_1)\n",
     "print('I_minus_Q_Qt_classic_2:', I_minus_Q_Qt_classic_2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Answer** \n",
+    "\n",
+    "Applying the Gram-Schmidt process a second time on Q, where Q is derived from the initial Gram-Schmidt output, leads to a decreased orthogonality loss for lower values of n. However, as n increases, the benefit of this second application diminishes, making it less effective for the higher values of n shown, especially after n > 7. These results (which hold given ranges of n and inputs) suggest that a better method is needed to reduce loss of orthogonality as n increases."
    ]
   },
   {
@@ -500,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": null,
    "id": "eb790bfb-2f80-4630-aeb6-30ff0b604cc7",
    "metadata": {},
    "outputs": [
