--- a/hw4_2023.ipynb
+++ b/hw4_2023.ipynb
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 41,
    "id": "dcbf2b55-d129-4cbe-a517-416c2682d8d5",
    "metadata": {},
    "outputs": [
@@ -278,26 +278,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "[[1. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]]\n"
+      "[[-242.  121.    0.    0.    0.    0.    0.    0.    0.    0.]\n",
+      " [ 121. -242.  121.    0.    0.    0.    0.    0.    0.    0.]\n",
+      " [   0.  121. -242.  121.    0.    0.    0.    0.    0.    0.]\n",
+      " [   0.    0.  121. -242.  121.    0.    0.    0.    0.    0.]\n",
+      " [   0.    0.    0.  121. -242.  121.    0.    0.    0.    0.]\n",
+      " [   0.    0.    0.    0.  121. -242.  121.    0.    0.    0.]\n",
+      " [   0.    0.    0.    0.    0.  121. -242.  121.    0.    0.]\n",
+      " [   0.    0.    0.    0.    0.    0.  121. -242.  121.    0.]\n",
+      " [   0.    0.    0.    0.    0.    0.    0.  121. -242.  121.]\n",
+      " [   0.    0.    0.    0.    0.    0.    0.    0.  121. -242.]]\n"
      ]
     }
    ],
@@ -305,64 +295,25 @@
     "from scipy.sparse import csr_array\n",
     "\n",
     "def SecondDerMatrix(n):\n",
-    "    \"\"\" Maps vector y to y'' acording to equation [2] \n",
-    "    by creating nxn matrix M such that M*y=y''s\"\"\"\n",
-    "    # Define h\n",
+    "    \"\"\" Creates n x n Matrix M such that M * y = y'' \"\"\"\n",
+    "\n",
+    "    # Compute constant h of all elements\n",
     "    h = 1 / (n + 1)\n",
     "\n",
-    "    # Create matrix\n",
-    "    M = np.zeros((n,n))\n",
-    "\n",
-    "    # TODO - Get all y'' with equation\n",
-    "    # Main diagonal has term for -2 y_k / h2 + e^y_i\n",
-    "    # Offdiagonal 1 row ABOVE it: y1/h^2\n",
-    "    # Offdiagonal 1 row UNDER it: y^3/h^2\n",
-    "    #diagonals = [[1, 2, 3, 4], [1, 2, 3], [1, 2]]\n",
-    "    #M = diags(diagonals, [0, -1, 1])\n",
-    "\n",
-    "\n",
+    "    # Define the diagonal elements ignoring the h^2 constant:\n",
+    "    # -2 to the main diagonal and 1 for the diagonals around it\n",
+    "    main_diagonal = -2*np.ones(n) \n",
+    "    top_diagonal = np.ones(n-1) \n",
+    "    under_diagonal = np.ones(n-1) \n",
     "    \n",
-    "    for k in range(n):\n",
-    "        # Get k-1,k and k+1\n",
-    "        if k==0:\n",
-    "            y_k_minus_1 = 0\n",
-    "        else:\n",
-    "            y_k_minus_1 = y_k\n",
+    "    # Create the sparse matrix with the diagonals defined\n",
+    "    diagonals = [main_diagonal, top_diagonal, under_diagonal]\n",
+    "    M = diags(diagonals, [0, 1, -1]) \n",
     "\n",
-    "        # Update value\n",
-    "        y_k = -2/(h^2) -2/(h^2) + lambertw(y_k) \n",
-    "        y_k_plus_1 = -2/(h^2) -2/(h^2) + lambertw(y_k)\n",
-    "\n",
-    "        #y_k_minus_1 = y_k\n",
-    "\n",
-    "        x_k = k * h\n",
-    "        left = 2\n",
-    "        center = 4\n",
-    "        right = 3\n",
-    "        print(k)\n",
-    "\n",
-    "    #diagonals = [[1, 2, 3, 4], [1, 2, 3], [1, 2]]\n",
-    "    #M = diags(diagonals, [0, 1, 2])\n",
-    "\n",
-    "    y_0 = 0\n",
-    "    y_1 = 0\n",
-    "    y_2 = 0\n",
-    "    M[0,0] = ( y_0 - 2 * y_1 + y_2 ) + np.exp(y_1)\n",
-    "\n",
-    "    # TODO - Put them in the diagonal elements\n",
-    "    # TODO - Migrate them to sparse matrix\n",
-    "    # DOCS FOR MATRIX USAGE\n",
-    "    # https://docs.scipy.org/doc/scipy/reference/generated/scipy.sparse.csr_array.html\n",
-    "\n",
-    "    # diagonals = [[1, 2, 3, 4], [1, 2, 3], [1, 2]]\n",
-    "    # M = diags(diagonals, [0, 1, 2])\n",
+    "    # Divide all elements by constant h^2\n",
+    "    M /= h**2\n",
     "    \n",
-    "    return M\n",
-    "    # raise NotImplementedError()\n",
-    "\n",
-    "n = 10\n",
-    "M = SecondDerMatrix(n)\n",
-    "print(M)"
+    "    return M\n"
    ]
   },
   {
@@ -376,20 +327,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 43,
    "id": "dea2b67c-4c28-42f3-9555-fdc2795741ab",
    "metadata": {},
    "outputs": [
     {
-     "ename": "RuntimeError",
-     "evalue": "failed to factorize matrix at line 110 in file ../../scipy/sparse/linalg/_dsolve/SuperLU/SRC/dsnode_bmod.c\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\Pablo\\Downloads\\hw4_2023.ipynb Cell 15\u001b[0m line \u001b[0;36m6\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Pablo/Downloads/hw4_2023.ipynb#X20sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m M \u001b[39m=\u001b[39m SecondDerMatrix(n)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Pablo/Downloads/hw4_2023.ipynb#X20sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m b \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marray([\u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m3\u001b[39m, \u001b[39m4\u001b[39m, \u001b[39m5\u001b[39m, \u001b[39m6\u001b[39m, \u001b[39m7\u001b[39m, \u001b[39m8\u001b[39m, \u001b[39m9\u001b[39m, \u001b[39m10\u001b[39m])\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Pablo/Downloads/hw4_2023.ipynb#X20sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m x \u001b[39m=\u001b[39m spsolve(M, b)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Pablo/Downloads/hw4_2023.ipynb#X20sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mFor b=\u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m, the solution x to Mx=b is \u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(b, x))\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Pablo/Downloads/hw4_2023.ipynb#X20sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mAnd indeed, Mx - b = \u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(M\u001b[39m.\u001b[39mdot(x) \u001b[39m-\u001b[39m b))\n",
-      "File \u001b[1;32mC:\\Python310\\lib\\site-packages\\scipy\\sparse\\linalg\\_dsolve\\linsolve.py:290\u001b[0m, in \u001b[0;36mspsolve\u001b[1;34m(A, b, permc_spec, use_umfpack)\u001b[0m\n\u001b[0;32m    288\u001b[0m indptr \u001b[39m=\u001b[39m A\u001b[39m.\u001b[39mindptr\u001b[39m.\u001b[39mastype(np\u001b[39m.\u001b[39mintc, copy\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)\n\u001b[0;32m    289\u001b[0m options \u001b[39m=\u001b[39m \u001b[39mdict\u001b[39m(ColPerm\u001b[39m=\u001b[39mpermc_spec)\n\u001b[1;32m--> 290\u001b[0m x, info \u001b[39m=\u001b[39m _superlu\u001b[39m.\u001b[39;49mgssv(N, A\u001b[39m.\u001b[39;49mnnz, A\u001b[39m.\u001b[39;49mdata, indices, indptr,\n\u001b[0;32m    291\u001b[0m                         b, flag, options\u001b[39m=\u001b[39;49moptions)\n\u001b[0;32m    292\u001b[0m \u001b[39mif\u001b[39;00m info \u001b[39m!=\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[0;32m    293\u001b[0m     warn(\u001b[39m\"\u001b[39m\u001b[39mMatrix is exactly singular\u001b[39m\u001b[39m\"\u001b[39m, MatrixRankWarning)\n",
-      "\u001b[1;31mRuntimeError\u001b[0m: failed to factorize matrix at line 110 in file ../../scipy/sparse/linalg/_dsolve/SuperLU/SRC/dsnode_bmod.c\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "For b=[0 0 8 7 5 6 7 8 9 0], the solution x to Mx=b is [-0.1825695  -0.36513899 -0.54770849 -0.66416228 -0.72276484 -0.74004508\n",
+      " -0.70773854 -0.61758077 -0.46130729 -0.23065364]\n",
+      "And indeed, Mx - b = [ 0.00000000e+00  0.00000000e+00  1.42108547e-14 -1.42108547e-14\n",
+      "  1.42108547e-14 -2.84217094e-14  1.42108547e-14  1.42108547e-14\n",
+      "  0.00000000e+00 -7.10542736e-15]\n"
      ]
     }
    ],
@@ -397,12 +347,13 @@
     "\"\"\"\n",
     "Function is y = \n",
     "\"\"\"\n",
+    "\n",
     "n = 10\n",
     "M = SecondDerMatrix(n)\n",
     "\n",
-    "y = np.array([0, 0, 8, 7, 5, 6, 7, 8, 9, 0])\n",
+    "b = np.array([0, 0, 8, 7, 5, 6, 7, 8, 9, 0])\n",
     "\n",
-    "b = np.array([1, 2, 3, 4, 5, 6, 7, 8, 9, 10])\n",
+    "#b = np.array([1, 2, 3, 4, 5, 6, 7, 8, 9, 10])\n",
     "x = spsolve(M, b)\n",
     "\n",
     "print(\"For b={}, the solution x to Mx=b is {}\".format(b, x))\n",
@@ -428,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "f693cfc3-9639-419a-b8f8-5179c3e60123",
    "metadata": {},
    "outputs": [],
