--- a/hw4_2023.ipynb
+++ b/hw4_2023.ipynb
@@ -270,27 +270,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 68,
    "id": "dcbf2b55-d129-4cbe-a517-416c2682d8d5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[-242.  121.    0.    0.    0.    0.    0.    0.    0.    0.]\n",
-      " [ 121. -242.  121.    0.    0.    0.    0.    0.    0.    0.]\n",
-      " [   0.  121. -242.  121.    0.    0.    0.    0.    0.    0.]\n",
-      " [   0.    0.  121. -242.  121.    0.    0.    0.    0.    0.]\n",
-      " [   0.    0.    0.  121. -242.  121.    0.    0.    0.    0.]\n",
-      " [   0.    0.    0.    0.  121. -242.  121.    0.    0.    0.]\n",
-      " [   0.    0.    0.    0.    0.  121. -242.  121.    0.    0.]\n",
-      " [   0.    0.    0.    0.    0.    0.  121. -242.  121.    0.]\n",
-      " [   0.    0.    0.    0.    0.    0.    0.  121. -242.  121.]\n",
-      " [   0.    0.    0.    0.    0.    0.    0.    0.  121. -242.]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from scipy.sparse import csr_array\n",
     "\n",
@@ -327,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 71,
    "id": "dea2b67c-4c28-42f3-9555-fdc2795741ab",
    "metadata": {},
    "outputs": [
@@ -335,29 +318,53 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "For b=[0 0 8 7 5 6 7 8 9 0], the solution x to Mx=b is [-0.1825695  -0.36513899 -0.54770849 -0.66416228 -0.72276484 -0.74004508\n",
-      " -0.70773854 -0.61758077 -0.46130729 -0.23065364]\n",
-      "And indeed, Mx - b = [ 0.00000000e+00  0.00000000e+00  1.42108547e-14 -1.42108547e-14\n",
-      "  1.42108547e-14 -2.84217094e-14  1.42108547e-14  1.42108547e-14\n",
-      "  0.00000000e+00 -7.10542736e-15]\n"
+      "x [0. 1. 2. 3. 4. 5. 6. 7. 8. 9.]\n",
+      "y [ 0.  0.  2.  6. 12. 20. 30. 42. 56. 72.]\n",
+      "y'' [2. 2. 2. 2. 2. 2. 2. 2. 2. 2.]\n",
+      "M*y [     0.    242.    242.    242.    242.    242.    242.    242.    242.\n",
+      " -10648.]\n",
+      "error [ 2.000e+00 -2.400e+02 -2.400e+02 -2.400e+02 -2.400e+02 -2.400e+02\n",
+      " -2.400e+02 -2.400e+02 -2.400e+02  1.065e+04]\n"
      ]
     }
    ],
    "source": [
-    "\"\"\"\n",
-    "Function is y = \n",
-    "\"\"\"\n",
+    "# Define quadratic function that satisfies y(0)=y(1)=0 \n",
+    "# And a function for its second derivative\n",
+    "def f(x):\n",
+    "    \"\"\" Quadratic equation   y = x^2 - x \"\"\"\n",
+    "    return x**2 - x\n",
     "\n",
+    "def f_second_derivative(x):\n",
+    "    \"\"\" Second derivative of y = x^2 - x \"\"\"\n",
+    "    return 2*np.ones(x.size)\n",
+    "\n",
+    "# Define constant and input values\n",
     "n = 10\n",
+    "x = np.linspace(0,9,n)\n",
+    "\n",
+    "# Create vector y of quadratic equation\n",
+    "y = f(x)\n",
+    "\n",
+    "\n",
+    "# Create second derivative Matrix and\n",
+    "# turn it into array for multiplication\n",
     "M = SecondDerMatrix(n)\n",
+    "M = M.toarray()\n",
     "\n",
-    "b = np.array([0, 0, 8, 7, 5, 6, 7, 8, 9, 0])\n",
+    "# Multiply y and M to get y'' aproximation\n",
+    "y_second_deriv_approx = M @ y\n",
     "\n",
-    "#b = np.array([1, 2, 3, 4, 5, 6, 7, 8, 9, 10])\n",
-    "x = spsolve(M, b)\n",
+    "# Compute analytical second derivative y''\n",
+    "y_second_deriv = f_second_derivative(x)\n",
     "\n",
-    "print(\"For b={}, the solution x to Mx=b is {}\".format(b, x))\n",
-    "print(\"And indeed, Mx - b = {}\".format(M.dot(x) - b))"
+    "# Compare y'' with its approximation\n",
+    "error = y_second_deriv - y_second_deriv_approx\n",
+    "print('x',x)\n",
+    "print('y',y)\n",
+    "print(\"y''\",y_second_deriv)\n",
+    "print(\"M*y\",y_second_deriv_approx)\n",
+    "#print('error',error)\n"
    ]
   },
   {
@@ -463,7 +470,15 @@
    "outputs": [],
    "source": [
     "# Subquestion 2, code part\n",
-    "# YOUR CODE HERE"
+    "# YOUR CODE HERE\n",
+    "\n",
+    "b = np.array([0, 0, 8, 7, 5, 6, 7, 8, 9, 0])\n",
+    "\n",
+    "#b = np.array([1, 2, 3, 4, 5, 6, 7, 8, 9, 10])\n",
+    "x = spsolve(M, b)\n",
+    "\n",
+    "print(\"For b={}, the solution x to Mx=b is {}\".format(b, x))\n",
+    "print(\"And indeed, Mx - b = {}\".format(M.dot(x) - b))"
    ]
   },
   {
